--- a/templates/form.html
+++ b/templates/form.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block title %}Handwritten Digit Identifier{% endblock %}
+{% block title %}Manjunath Anand - Handwritten Digit Identifier{% endblock %}
 
 {% block preendbody %}
 <script type="text/javascript">
